--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -6,7 +6,7 @@
 # Appearance
 
 appearance:
-  theme_day: green #forest #minimal
+  theme_day: ocean #forest #minimal
   theme_night:
   font: native
   font_size: L
