--- a/theme.toml
+++ b/theme.toml
@@ -31,7 +31,8 @@ tags = ["academic",
         "one page",
         "customizable",
         "technical",
-        "slide"
+        "slide",
+        "ocean"
         ]
 features = ["page builder", "widgets", "themes", "search", "research publication system", "filterable portfolio",
             "blog", "create courses", "talks", "events", "slides", "gallery", "contact form"]
