--- a/theme.toml
+++ b/theme.toml
@@ -32,7 +32,7 @@ tags = ["academic",
         "customizable",
         "technical",
         "slide",
-        "ocean"
+        "Ocean"
         ]
 features = ["page builder", "widgets", "themes", "search", "research publication system", "filterable portfolio",
             "blog", "create courses", "talks", "events", "slides", "gallery", "contact form"]
