--- a/data/themes/green.toml
+++ b/data/themes/green.toml
@@ -5,30 +5,16 @@ name = "green"
 light = true
 
 # Primary
-#primary = "#3f51b5"
-#primary_light = "#757de8"
-#primary_dark = "#002984"
+primary = "#0a5d00"
+primary_light = "#1fc600"
+primary_dark = "#063b00"
 
 # Menu
-#menu_primary = "#3f51b5" # 500
-#menu_text = "#fff"
-#menu_text_active = "#8c9eff" # A100
-#menu_title = "#fff"
+menu_primary = "#063b00" # 500
+menu_text = "#fff"
+menu_text_active = "#8c9eff" # A100
+menu_title = "#fff"
 
 # Home sections
-#home_section_odd = "rgb(255, 255, 255)"
-#home_section_even = "rgb(247, 247, 247)"
-
-:root {
-  --color-primary-50: 240 253 244;
-  --color-primary-100: 220 252 231;
-  --color-primary-200: 187 247 208;
-  --color-primary-300: 134 239 172;
-  --color-primary-400: 74 222 128;
-  --color-primary-500: 34 197 94;
-  --color-primary-600: 22 163 74;
-  --color-primary-700: 21 128 61;
-  --color-primary-800: 22 101 52;
-  --color-primary-900: 20 83 45;
-  --color-primary-950: 5 46 22;
-}
+home_section_odd = "rgb(0, 255, 0)"
+home_section_even = "rgb(247, 247, 247)"
