--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -6,12 +6,12 @@
 # Appearance
 
 appearance:
-  theme: forest #ocean
-  theme_day: forest #forest #minimal
+  #theme: forest #ocean
+  #theme_day: forest #forest #minimal
   #theme_night: forest
   font: native
   font_size: L
-  color: forest
+  color: green
 
 # SEO
 
