--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -7,7 +7,7 @@
 
 appearance:
 #  theme: forest #ocean
-  theme_day: orange #forest #minimal
+  theme_day: 1950s #forest #minimal
   theme_night: minimal
   font: native
   font_size: L
