--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -7,7 +7,8 @@
 
 appearance:
 #  theme: forest #ocean
-  theme_day: 1950s #forest #minimal
+  theme_day: minimal
+  #theme_day: 1950s #forest #minimal
   theme_night: minimal
   font: native #minimal
   font_size: L
